--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "dependencies": {
+    "@ngneat/falso": "^7.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
@@ -15,7 +22,8 @@
   "scripts": {
     "start": "node dist/main.js",
     "build": "npx tsc ./src/main.ts --outDir ./dist/ --module commonjs --target es6",
-    "dev": "npx ts-node ./src/main.ts"
+    "dev": "npx ts-node ./src/main.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
